# StayPutVR

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  LICENSE  README.md  build_installer.bat  build_linux.sh  build_win.bat  driver.vrdrivermanifest  todo.txt
application/: CMakeLists.txt  resources.rc
application/resources/: patreon_supporters.json  whats_new.md
application/src/: main.cpp  resource.h  stb_image_impl.cpp
application/src/DeviceManager/: DeviceManager.cpp  DeviceManager.hpp
application/src/IPC/: IPCClient.cpp  IPCClient.hpp
application/src/managers/: ButtplugManager.cpp  ButtplugManager.hpp  MicrophoneManager.cpp  MicrophoneManager.hpp  OpenShockManager.cpp  OpenShockManager.hpp  PiShockManager.cpp  PiShockManager.hpp  PiShockWebSocketManager.cpp  PiShockWebSocketManager.hpp  TwitchManager.cpp  TwitchManager.hpp
application/src/managers/twitch/: TwitchOAuthCallbackServer.cpp  TwitchOAuthCallbackServer.hpp
application/src/ui/: ImGuiHelpers.hpp  SplashScreen.cpp  SplashScreen.hpp  UIManager.cpp  UIManager.hpp  UIManager_Devices.cpp  UIManager_Integrations.cpp  UIManager_OSC.cpp  UIManager_Tabs.cpp  UIManager_WhatsNew.cpp
application/src/ui/panels/: ButtplugPanel.cpp  ButtplugPanel.hpp  OpenShockPanel.cpp  OpenShockPanel.hpp  PiShockPanel.cpp  PiShockPanel.hpp
cmake/: GitHash.cmake
common/: AsyncWorkQueue.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  Config.cpp  Config.hpp  DeviceTypes.hpp  HttpClient.cpp  HttpClient.hpp  IPCProtocol.hpp  IShockDeviceManager.hpp  IVRDevice.hpp  LinkStatus.hpp  Logger.cpp  Logger.hpp  OSCManager.cpp  OSCManager.hpp  OSCQueryServer.cpp  OSCQueryServer.hpp  PathUtils.hpp  PiShockManager.hpp  PlatformCompat.hpp  ShockDeviceBase.cpp  ShockDeviceBase.hpp  Version.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WindowsConfig.hpp  WinsockCompat.hpp  Wrapper_oscpp_client.hpp  Wrapper_oscpp_server.hpp
docs/: TECH_DEBT_SPRINT_1.md
driver/: CMakeLists.txt
driver/Driver/: DriverFactory.cpp  DriverFactory.hpp  VRDriver.cpp  VRDriver.hpp
driver/IPC/: IPCServer.cpp  IPCServer.hpp
installer/: LICENSE.txt  app_installer.nsi  driver.vrdrivermanifest
src/: Audio.cpp  Audio.hpp  Config.cpp  Config.hpp  Logger.cpp  Logger.hpp  PathUtils.hpp  StayPutDriver.cpp  StayPutDriver.h  TrackedDeviceData.h  main.cpp
src/Driver/: DeviceType.hpp  IVRDevice.hpp  IVRDriver.hpp  VRDriver.cpp  VRDriver.hpp
src/Native/: DriverFactory.cpp  DriverFactory.hpp
src/ui/: StayPutUI.cpp  StayPutUI.h  UIManager.cpp  UIManager.hpp
wiki/: Building.md  Interface.md  OSC.md  PiShock.md  Twitch.md
